--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Jon Barron</title>
+    <title>Xiaolong Huang</title>
 
-    <meta name="author" content="Jon Barron">
+    <meta name="author" content="Xiaolong Huang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="icon" type="image/png" href="images/rainbow.jpg">
+    <link rel="icon" type="image/jpg" href="images/rainbow.jpg">
     
   </head>
 
