--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
                 <p class="name" style="text-align: center;">
                   Xiaolong Huang
                 </p>
-                <p>I received my B.E. degree from Chongqing University of Technology., <a href="https://en.wikipedia.org/wiki/One_Market_Plaza">San Francisco</a>, where I work on computer vision and machine learning.
-                </p>
-                <p>
-                  I’m actively looking for a Ph.D. opportunity starting from Fall 2024. :smiley:
-                </p>
+                <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024:smile:. My general interests lie in computer vision and machine learning, and I'm currently focusing on visual generative models and visual fine-tuning.</p>
+                <p>I received my Bachelor's Degree from Chongqing University of Technology in Jul. 2023. I was very fortunate to spend more than one year working with Qiankun Li under the supervise of <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a> and <a href="https://scholar.google.com/citations?hl=en&user=Vkzd7MIAAAAJ">Shiguang Shan</a> at University of Science and Technology of China and University of Chinese Academy of Sciences. </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
