--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Xiaolong Huang
                 </p>
                 <p>My general interests lie in computer vision and machine learning, and I'm currently focusing on visual generative models and visual fine-tuning. Always in the journey of learning~</p>
-                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I was very fortunate to work closely with Qiankun Li at University of Science and Technology of China under the supervision of <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a> and <a href="https://scholar.google.com/citations?hl=en&user=Vkzd7MIAAAAJ">Shiguang Shan</a>. </p>
+                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I was very fortunate to work closely with Qiankun Li at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology</a> of China under the supervision of <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a> and <a href="https://scholar.google.com/citations?hl=en&user=Vkzd7MIAAAAJ">Shiguang Shan</a>. </p>
                 <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024 :smile: </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
