--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                   Xiaolong Huang
                 </p>
                 <p>I'm generally interested in computer vision and machine learning, and I'm currently focusing on visual generative models and visual fine-tuning. Always in the journey of learning~</p>
-                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I worked as a research intern at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> from March 2022 to October 2023, fortunately being supervised of <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a> and <a href="https://scholar.google.com/citations?hl=en&user=Vkzd7MIAAAAJ">Shiguang Shan</a>. </p>
-                <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024 😁 </p>
+                <p>I received my Bachelor's Degree from Chongqing University of Technology in 2023. I also worked as a research intern at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> from March 2022 to October 2023, fortunately being supervised by <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a> and <a href="https://scholar.google.com/citations?hl=en&user=Vkzd7MIAAAAJ">Shiguang Shan</a>. </p>
+                <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024. 😁 </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
