--- a/index.html
+++ b/index.html
@@ -70,27 +70,17 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="http://jonbarron.info/zipnerf">
-            <span class="papertitle">Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields</span>
-          </a>
+          <span class="papertitle">Layer-wise Pre-weight Decay</span>
           <br>
-          <strong>Jonathan T. Barron</strong>,
-          <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-          <a href="https://scholar.harvard.edu/dorverbin/home">Dor Verbin</a>,
-          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-          <a href="https://phogzone.com/">Peter Hedman</a>
+          <strong>Xiaolong Huang</strong>, Qiankun Li, Hanguang Xiao, Xuesong Gao, Xueran Li
           <br>
-          <em>ICCV</em>, 2023 &nbsp <font color="red"><strong>(Oral Presentation, Best Paper Finalist)</strong></font>
+          <em>ICLR</em>, 2024  (Under review)
           <br>
-          <a href="http://jonbarron.info/zipnerf">project page</a>
-          /
-          <a href="https://www.youtube.com/watch?v=xrrhynRzC8k">video</a>
-          /
-          <a href="https://arxiv.org/abs/2304.06706">arXiv</a>
-          <p></p>
-          <p>
-          Combining mip-NeRF 360 and grid-based models like Instant NGP lets us reduce error rates by 8%&ndash;77% and accelerate training by 24x.
-          </p>
+          <a href="papers/Layer-wise_Pre-weight_Decay.pdf">pdf</a>
+<!--           / -->
+<!--           <a href="https://arxiv.org/abs/2304.06706">code</a> -->
+<!--           <p></p> -->
+<!--           <p></p> -->
         </td>
       </tr>
      
@@ -101,7 +91,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
+                  Folk from Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">website</a>.
                 </p>
               </td>
             </tr>
