--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Xiaolong Huang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/rainbow-32.png">
+    <link rel="icon" type="image/png" href="images/seal_icon.png">
     
   </head>
 
