--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
-<!--                   <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
+<!--              <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/rainbow-xiao">Github</a>
@@ -55,7 +55,7 @@
             <source src="images/zipnerf.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='images/zipnerf.jpg' width="160">
+            <img src='images' width="160">
           </div>
           <script type="text/javascript">
             function zipnerf_start() {
@@ -81,6 +81,10 @@
 <!--           <p></p> -->
 <!--           <p></p> -->
         </td>
+
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <span class="papertitle">Will update soon~</span>
+        </td>
      
             
           </tbody></table>
@@ -89,7 +93,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Folk from Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">website</a>.
+                  Folked from Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">website</a>.
                 </p>
               </td>
             </tr>
