--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <p class="name" style="text-align: center;">
                   Xiaolong Huang
                 </p>
-                <p>I'm generally interested in computer vision and machine learning, and I'm currently concentrated on visual generative models and visual fine-tuning. Always on the journey of learning~</p>
+                <p>I'm generally interested in machine learning and computer vision, and I'm currently concentrated on visual generative models and visual fine-tuning. Always in the journey of learning~</p>
                 <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I also worked closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li </a> at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> since March 2022, fortunately being supervised by <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a> and <a href="https://scholar.google.com/citations?hl=en&user=Vkzd7MIAAAAJ">Shiguang Shan</a>. </p>
-                <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024. ~😁 </p>
+                <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024 :) </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
@@ -88,7 +88,7 @@
             <tr>
               <td style="padding:0px">
                 <br>
-                <p style="text-align:right;font-size:small;">
+                <p style="text-align:left;font-size:small;">
                   Will update soon. Folked from Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">website</a>.
                 </p>
               </td>
