--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 </p>
                 <p>I'm generally interested in machine learning and computer vision, and I'm currently concentrated on visual generative models and visual fine-tuning. Always in the journey of learning~</p>
                 <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I also worked closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li </a> at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> since March 2022, fortunately being supervised by <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
-                <p>I’m actively looking for a Ph.D. opportunity starting from Fall 2024 :) </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
@@ -48,8 +47,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
         <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/MVM.png" alt="microflakes" width="160" height="160">
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/MVM.png" alt="microflakes" width="160" height="160"></td>
 <!--           <div class="one">
             <div class="two" id='zipnerf_image'><video  width=100% height=100% muted autoplay loop>
             <source src="images/MVM.png" type="video/mp4">
@@ -67,10 +65,8 @@
             }
             zipnerf_stop()
           </script> -->
-        </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <span class="papertitle">Data-Efficient Masked Video Modeling for Self-supervised
-Action Recognition</span>
+          <span class="papertitle">Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</span>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Zhifan Wan, Lanqing Hu, Shuzhe Wu, Jie Zhang, Shiguang Shan, Zengfu Wang
           <br>
