--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
-<!--                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
+                  <a href="https://scholar.google.com/citations?user=9Yc727AAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp;/&nbsp;
+<!--                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/rainbow-xiao">Github</a>
                 </p>
               </td>
@@ -47,7 +47,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
         <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/MVM.png" alt="microflakes" width="160" height="160"></td>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/MVM.png" alt="microflakes" width="200" height="160"></td>
 <!--           <div class="one">
             <div class="two" id='zipnerf_image'><video  width=100% height=100% muted autoplay loop>
             <source src="images/MVM.png" type="video/mp4">
@@ -66,16 +66,63 @@
             zipnerf_stop()
           </script> -->
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <span class="papertitle">Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</span>
+          <a href="data/Data_Efficient_MVM.pdf"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Zhifan Wan, Lanqing Hu, Shuzhe Wu, Jie Zhang, Shiguang Shan, Zengfu Wang
-          <br>
+          <p></p>
           <em>ACMMM</em>, 2023
           <br>
-          <a href="data/Data_Efficient_MVM.pdf">pdf</a>
+          <a href="data/Data_Efficient_MVM.pdf">paper</a>
           /
-          <a href="https://arxiv.org/abs/2304.06706">arXiv</a>
+          <a href="https://dl.acm.org/doi/abs/10.1145/3581783.3612496">webpage</a>
           <p></p>
+        </td>
+        </tr>
+
+        <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/TSN.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="data/Two_Stream_Net_VAR.pdf"><papertitle>Mitigating Context Bias in Action Recognition via Skeleton-Dominated Two-Stream Network</papertitle>
+          <br>
+          Qiankun Li, <strong>Xiaolong Huang</strong>, Yuwen Luo, Xiaoyu Hu, Xinyu Sun, Zengfu Wang
+          <p></p>
+          <em>AMC-SME Workshop, ACMMM</em>, 2023 <font color="red"><strong>(Best Student Paper Award)</strong></font>
+          <br>
+          <a href="data/Two_Stream_Net_VAR.pdf">paper</a>
+          /
+          <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a>
+          <p></p>
+        </td>
+        </tr>
+
+        <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/DT.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="data/Domain_Transformer.pdf"><papertitle>Embracing Large Natural Data: Enhancing Medical Image Analysis via Cross-domain Fine-tuning</papertitle>
+          <br>
+          Qiankun Li, <strong>Xiaolong Huang</strong>, Bo Fang, Huabao Chen, Siyuan Ding, Xu Liu
+          <p></p>
+          <em>JBHI</em>, 2023 (Accepted)
+          <br>
+          <a href="data/Domain_Transformer.pdf">paper</a>
+          /
+<!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
+          <p></p>
+        </td>
+        </tr>
+
+        <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/SL_ILR.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="data/Domain_Transformer.pdf"><papertitle>2nd Place Solution to Google Universal Image Embedding</papertitle>
+          <br>
+          <strong>Xiaolong Huang</strong>, Qiankun Li
+          <p></p>
+          <em>ILR Workshop, ECCV</em>, 2022 <font color="red"><strong>(Oral)</strong></font>
+          <br>
+          <a href="data/ILR_Workshop_ECCV_2nd_Place_Solution.pdf">paper</a>
+          /
+          <a href="https://arxiv.org/abs/2210.08735">arXiv</a>
           <p></p>
         </td>
         </tr>
@@ -87,7 +134,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:left;font-size:small;">
-                  Will update soon. Folked from Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">website</a>.
+                  Folked from Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">website</a>.
                 </p>
               </td>
             </tr>
