--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             zipnerf_stop()
           </script> -->
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Data_Efficient_MVM.pdf"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle>
+          <a href="data/Data_Efficient_MVM.pdf"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Zhifan Wan, Lanqing Hu, Shuzhe Wu, Jie Zhang, Shiguang Shan, Zengfu Wang
           <p></p>
@@ -82,7 +82,7 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/TSN.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Two_Stream_Net_VAR.pdf"><papertitle>Mitigating Context Bias in Action Recognition via Skeleton-Dominated Two-Stream Network</papertitle>
+          <a href="data/Two_Stream_Net_VAR.pdf"><papertitle>Mitigating Context Bias in Action Recognition via Skeleton-Dominated Two-Stream Network</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Yuwen Luo, Xiaoyu Hu, Xinyu Sun, Zengfu Wang
           <p></p>
@@ -98,7 +98,7 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/DT.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Domain_Transformer.pdf"><papertitle>Embracing Large Natural Data: Enhancing Medical Image Analysis via Cross-domain Fine-tuning</papertitle>
+          <a href="data/Domain_Transformer.pdf"><papertitle>Embracing Large Natural Data: Enhancing Medical Image Analysis via Cross-domain Fine-tuning</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Bo Fang, Huabao Chen, Siyuan Ding, Xu Liu
           <p></p>
@@ -114,7 +114,7 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/SL_ILR.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Domain_Transformer.pdf"><papertitle>2nd Place Solution to Google Universal Image Embedding</papertitle>
+          <a href="data/Domain_Transformer.pdf"><papertitle>2nd Place Solution to Google Universal Image Embedding</papertitle></a>
           <br>
           <strong>Xiaolong Huang</strong>, Qiankun Li
           <p></p>
