--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I have been working closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li </a> at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> since March 2022, fortunately being supervised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="CV/Shaw_CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/My_CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=9Yc727AAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp;/&nbsp;
 <!--                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/rainbow-xiao">Github</a>
