--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          
+
+        <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/OLOR_R.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="data/OLOR.pdf"><papertitle>One Step Learning, One Step Review</papertitle></a>
+          <br>
+          <strong>Xiaolong Huang</strong>, Qiankun Li, Xueran Li, Xuesong Gao
+          <p></p>
+          <em>AAAI</em>, 2024 (Accepted)
+          <br>
+          <a href="data/OLOR.pdf">paper</a>/ (final paper will be available soon)
+<!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
+          <p></p>
+        </td>
+        </tr>
+        
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/MVM.png" alt="microflakes" width="200" height="160"></td>
 <!--           <div class="one">
@@ -113,7 +128,7 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/SL_ILR.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Domain_Transformer.pdf"><papertitle>2nd Place Solution to Google Universal Image Embedding</papertitle></a>
+          <a href="data/ILR_Workshop_ECCV_2nd_Place_Solution.pdf"><papertitle>2nd Place Solution to Google Universal Image Embedding</papertitle></a>
           <br>
           <strong>Xiaolong Huang</strong>, Qiankun Li
           <p></p>
