--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Xiaolong Huang
                 </p>
                 <p>I am generally interested in machine learning and computer vision, and I am currently focusing on visual generative models and visual representation learning. Always on the journey of learning~</p>
-                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023. I have been working closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li </a> at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> since March 2022, fortunately being supervised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
+                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023, under the supervision of Prof. <a href="https://www.researchgate.net/profile/Hanguang-Xiao">Hanguang Xiao</a>. I have also been working closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li</a> at <a href="https://en.auto.ustc.edu.cn/main.htm">University of Science and Technology of China</a> since March 2022, being supervised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/My_CV.pdf">CV</a> &nbsp;/&nbsp;
