--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/OLOR_R.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/OLOR.pdf"><papertitle>One Step Learning, One Step Review</papertitle></a>
+          <a href="data/OLOR-AAAI.pdf"><papertitle>One Step Learning, One Step Review</papertitle></a>
           <br>
           <strong>Xiaolong Huang</strong>, Qiankun Li, Xueran Li, Xuesong Gao
           <p></p>
           <em>AAAI</em>, 2024 (Accepted)
           <br>
-          <a href="data/OLOR.pdf">paper</a>/ (final paper will be available soon)
+          <a href="data/OLOR-AAAI.pdf">paper</a>
 <!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
           <p></p>
         </td>
@@ -137,6 +137,8 @@
           <a href="data/ILR_Workshop_ECCV_2nd_Place_Solution.pdf">paper</a>
           /
           <a href="https://arxiv.org/abs/2210.08735">arXiv</a>
+          /
+          <a href="https://www.kaggle.com/competitions/google-universal-image-embedding/leaderboard">Competition Link</a>
           <p></p>
         </td>
         </tr>
