--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/OLOR_R.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/OLOR-Method.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="data/OLOR-AAAI.pdf"><papertitle>One Step Learning, One Step Review</papertitle></a>
           <br>
