--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <img style="width:100%;max-width:100%" alt="profile photo" src="images/rainbow.png" class="hoverZoomLink">
+                <img style="width:100%;max-width:100%" alt="profile photo" src="images/childhood.png" class="hoverZoomLink">
               </td>
             </tr>
           </tbody></table>
