--- a/index.html
+++ b/index.html
@@ -64,14 +64,12 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/TSN.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Two_Stream_Net_VAR.pdf"><papertitle>Mitigating Context Bias in Action Recognition via Skeleton-Dominated Two-Stream Network</papertitle></a>
+          <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458"><papertitle>Mitigating Context Bias in Action Recognition via Skeleton-Dominated Two-Stream Network</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Yuwen Luo, Xiaoyu Hu, Xinyu Sun, Zengfu Wang
           <p></p>
           <em>AMC-SME Workshop, ACMMM</em>, 2023 <font color="red"><strong>(Best Student Paper Award)</strong></font>
           <br>
-          <a href="data/Two_Stream_Net_VAR.pdf">paper</a>
-          /
           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a>
           <p></p>
         </td>
@@ -97,14 +95,12 @@
             zipnerf_stop()
           </script> -->
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Data_Efficient_MVM.pdf"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle></a>
+          <a href="https://dl.acm.org/doi/abs/10.1145/3581783.3612496"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Zhifan Wan, Lanqing Hu, Shuzhe Wu, Jie Zhang, Shiguang Shan, Zengfu Wang
           <p></p>
           <em>ACMMM</em>, 2023
           <br>
-          <a href="data/Data_Efficient_MVM.pdf">paper</a>
-          /
           <a href="https://dl.acm.org/doi/abs/10.1145/3581783.3612496">webpage</a>
           <p></p>
         </td>
@@ -113,14 +109,13 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/DT.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/Domain_Transformer.pdf"><papertitle>Embracing Large Natural Data: Enhancing Medical Image Analysis via Cross-domain Fine-tuning</papertitle></a>
+          <a href="https://ieeexplore.ieee.org/abstract/document/10361546"><papertitle>Embracing Large Natural Data: Enhancing Medical Image Analysis via Cross-domain Fine-tuning</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Bo Fang, Huabao Chen, Siyuan Ding, Xu Liu
           <p></p>
-          <em>JBHI</em>, 2023 (Accepted)
+          <em>JBHI</em>, 2023
           <br>
-          <a href="data/Domain_Transformer.pdf">paper</a>
-<!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
+          <a href="https://ieeexplore.ieee.org/abstract/document/10361546">webpage</a>
           <p></p>
         </td>
         </tr>
