--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023, under the supervision of Prof. <a href="https://www.researchgate.net/profile/Hanguang-Xiao">Hanguang Xiao</a>. I have also been working closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li</a> since March 2022, being supervised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
                 <p style="text-align:center">
                   <a href="hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/My_CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/XiaolongHuang_CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=9Yc727AAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp;/&nbsp;
 <!--                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/rainbow-xiao">Github</a>
