--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <em>AAAI</em>, 2024 (Accepted)
           <br>
           <a href="data/OLOR-AAAI.pdf">paper</a>
+          <a href="https://arxiv.org/abs/2401.10962">arXiv</a>
 <!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
           <p></p>
         </td>
