--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <img style="width:100%;max-width:100%" alt="profile photo" src="images/childhood.png" class="hoverZoomLink">
+                <img style="width:100%;max-width:100%" alt="profile photo" src="images/Wushan.jpg" class="hoverZoomLink">
               </td>
             </tr>
           </tbody></table>
@@ -56,6 +56,8 @@
           <em>AAAI</em>, 2024 (Accepted)
           <br>
           <a href="data/OLOR-AAAI.pdf">paper</a>
+          /
+          <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29159">webpage</a>
           /
           <a href="https://arxiv.org/abs/2401.10962">arXiv</a>
 <!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
