Update personal information and achievements
Added personal interests and academic background.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p class="name" style="text-align: center;"> Xiaolong Huang </p>
+                <p class="name" style="text-align: center;">
+                  Xiaolong Huang
+                </p>
+                <p>I have a keen interest in machine learning and computer vision. Presently, my focus is on exploring learned optimizers (LOs), visual generative models, and the intricacies of visual representation learning. Always on the journey of learning~</p>
+                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023, under the supervision of Prof. <a href="https://www.researchgate.net/profile/Hanguang-Xiao">Hanguang Xiao</a>. I have also been working closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li</a> since March 2022, being supervised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
                 <p style="text-align:center">
                   <a href="mailto:hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/XiaolongHuang_CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=9Yc727AAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp;/&nbsp;
+<!--                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/rainbow-xiao">Github</a>
                 </p>
               </td>
@@ -47,7 +53,7 @@
           <br>
           <strong>Xiaolong Huang</strong>, Qiankun Li, Xueran Li, Xuesong Gao
           <p></p>
-          <em>AAAI</em>, 2024
+          <em>AAAI</em>, 2024 (Accepted)
           <br>
           <a href="data/OLOR-AAAI.pdf">paper</a>
           /
@@ -66,7 +72,7 @@
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Yuwen Luo, Xiaoyu Hu, Xinyu Sun, Zengfu Wang
           <p></p>
-          <em>AMC-SME Workshop, ACMMM</em>, 2023
+          <em>AMC-SME Workshop, ACMMM</em>, 2023 <font color="red"><strong>(Best Student Paper Award)</strong></font>
           <br>
           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a>
           <p></p>
@@ -125,11 +131,13 @@
           <br>
           <strong>Xiaolong Huang</strong>, Qiankun Li
           <p></p>
-          <em>ILR Workshop, ECCV</em>, 2022
+          <em>ILR Workshop, ECCV</em>, 2022 <font color="red"><strong>(Oral)</strong></font>
           <br>
           <a href="data/ILR_Workshop_ECCV_2nd_Place_Solution.pdf">paper</a>
           /
           <a href="https://arxiv.org/abs/2210.08735">arXiv</a>
+          /
+          <a href="https://www.kaggle.com/competitions/google-universal-image-embedding/leaderboard">Competition Link</a>
           <p></p>
         </td>
         </tr>
