--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <p class="name" style="text-align: center;">
                   Xiaolong Huang
                 </p>
-                <p>I have a keen interest in machine learning and computer vision. Presently, my focus is on exploring learned optimizers (LOs), visual generative models, and the intricacies of visual representation learning. Always on the journey of learning~</p>
-                <p>I received my Bachelor's Degree from Chongqing University of Technology in July 2023, under the supervision of Prof. <a href="https://www.researchgate.net/profile/Hanguang-Xiao">Hanguang Xiao</a>. I have also been working closely with <a href="https://openreview.net/profile?id=~Qiankun_Li1">Qiankun Li</a> since March 2022, being supervised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=uDtOVBAAAAAJ">Zengfu Wang</a>. </p>
+                <p>Hey, I am Xiaolong Huang (黄晓龙), an MSc student (Jan. 25 - now) at MILA and Concordia University. Currently I am working on learned optimization (LO) under the supervision of Prof. <a href="https://eugenium.github.io">Eugene Belilovsky</a>.</p>
+                <p> am also deeply interested in exploring and interpreting visual and multimodal representations, aiming to create faithful and robust representations for downstream learning. Always open to research discussions and collaborations, feel free to reach out!</p>
                 <p style="text-align:center">
                   <a href="mailto:hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/XiaolongHuang_CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <!-- <a href="data/XiaolongHuang_CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <a href="https://scholar.google.com/citations?user=9Yc727AAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp;/&nbsp;
 <!--                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/rainbow-xiao">Github</a>
