--- a/index.html
+++ b/index.html
@@ -47,20 +47,48 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ELO.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="data/ELO.pdf"><papertitle>Towards Efficient Unroll Generalization In
+Learned Optimizers</papertitle></a>
+          <br>
+          <strong>Xiaolong Huang</strong>, Benjamin Therien, Eugene Belilovsky
+          <p></p>
+          (Under review at ICLR 2026)
+          <br>
+          <a href="data/ELO.pdf">paper</a>
+          <p></p>
+        </td>
+        </tr>
+
+        <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/Micro_Action_Recognition.png" alt="microflakes" width="200" height="160"></td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458"><papertitle>Advancing Micro-Action Recognition with Multi-Auxiliary Heads and Hybrid Loss Optimization</papertitle></a>
+          <br>
+          Qiankun Li, <strong>Xiaolong Huang</strong>, Huabao Chen, Feng He, Qiupu Chen, Zengfu Wang
+          <p></p>
+          <em>ACMMM</em>, 2024
+          <br>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3664647.3688975">paper</a>
+          <p></p>
+        </td>
+        </tr>
+            
+        <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/OLOR-Method.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="data/OLOR-AAAI.pdf"><papertitle>One Step Learning, One Step Review</papertitle></a>
           <br>
           <strong>Xiaolong Huang</strong>, Qiankun Li, Xueran Li, Xuesong Gao
           <p></p>
-          <em>AAAI</em>, 2024 (Accepted)
+          <em>AAAI</em>, 2024
           <br>
-          <a href="data/OLOR-AAAI.pdf">paper</a>
+          <!-- <a href="data/OLOR-AAAI.pdf">paper</a>
           /
           <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29159">webpage</a>
-          /
-          <a href="https://arxiv.org/abs/2401.10962">arXiv</a>
-<!--           <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a> -->
+          / -->
+          <a href="https://arxiv.org/abs/2401.10962">paper</a>
           <p></p>
         </td>
         </tr>
@@ -74,7 +102,7 @@
           <p></p>
           <em>AMC-SME Workshop, ACMMM</em>, 2023 <font color="red"><strong>(Best Student Paper Award)</strong></font>
           <br>
-          <a href="https://dl.acm.org/doi/abs/10.1145/3606042.3616458">webpage</a>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3606042.3616458">paper</a>
           <p></p>
         </td>
         </tr>
@@ -99,18 +127,18 @@
             zipnerf_stop()
           </script> -->
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://dl.acm.org/doi/abs/10.1145/3581783.3612496"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle></a>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612496"><papertitle>Data-Efficient Masked Video Modeling for Self-supervised Action Recognition</papertitle></a>
           <br>
           Qiankun Li, <strong>Xiaolong Huang</strong>, Zhifan Wan, Lanqing Hu, Shuzhe Wu, Jie Zhang, Shiguang Shan, Zengfu Wang
           <p></p>
           <em>ACMMM</em>, 2023
           <br>
-          <a href="https://dl.acm.org/doi/abs/10.1145/3581783.3612496">webpage</a>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612496">paper</a>
           <p></p>
         </td>
         </tr>
 
-        <tr>
+        <!-- <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/DT.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://ieeexplore.ieee.org/abstract/document/10361546"><papertitle>Embracing Large Natural Data: Enhancing Medical Image Analysis via Cross-domain Fine-tuning</papertitle></a>
@@ -119,10 +147,10 @@
           <p></p>
           <em>JBHI</em>, 2023
           <br>
-          <a href="https://ieeexplore.ieee.org/abstract/document/10361546">webpage</a>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612496">webpage</a>
           <p></p>
         </td>
-        </tr>
+        </tr> -->
 
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/SL_ILR.png" alt="microflakes" width="200" height="160"></td>
