Update GitHub links in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <!-- <a href="data/XiaolongHuang_CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <a href="https://scholar.google.com/citations?user=9Yc727AAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp;/&nbsp;
 <!--                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
-                  <a href="https://github.com/rainbow-xiao">Github</a>
+                  <a href="https://github.com/xiaol827">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -71,6 +71,8 @@ Learned Optimizers</papertitle></a>
           <em>ACMMM</em>, 2024
           <br>
           <a href="https://dl.acm.org/doi/pdf/10.1145/3664647.3688975">paper</a>
+          /
+          <a href="https://github.com/qklee-lz/ACMMM2024-MAC">code</a>
           <p></p>
         </td>
         </tr>
@@ -84,11 +86,11 @@ Learned Optimizers</papertitle></a>
           <p></p>
           <em>AAAI</em>, 2024
           <br>
-          <!-- <a href="data/OLOR-AAAI.pdf">paper</a>
-          /
-          <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29159">webpage</a>
-          / -->
           <a href="https://arxiv.org/abs/2401.10962">paper</a>
+          /
+          <a href="https://github.com/xiaol827/OLOR-AAAI-2024">code</a>
+          <!-- /
+          <a href="https://arxiv.org/abs/2401.10962">paper</a> -->
           <p></p>
         </td>
         </tr>
@@ -161,9 +163,9 @@ Learned Optimizers</papertitle></a>
           <p></p>
           <em>ILR Workshop, ECCV</em>, 2022 <font color="red"><strong>(Oral)</strong></font>
           <br>
-          <a href="data/ILR_Workshop_ECCV_2nd_Place_Solution.pdf">paper</a>
+          <a href="https://arxiv.org/abs/2210.08735">paper</a>
           /
-          <a href="https://arxiv.org/abs/2210.08735">arXiv</a>
+          <a href="https://github.com/xiaol827/ECCV2022-ILR-workshop">code</a>
           /
           <a href="https://www.kaggle.com/competitions/google-universal-image-embedding/leaderboard">Competition Link</a>
           <p></p>
