--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Learned Optimizers</papertitle></a>
           <br>
           <strong>Xiaolong Huang</strong>, Benjamin Therien, Eugene Belilovsky
           <p></p>
-          (Under review at ICLR 2026)
+          (Under review at ICLR)
           <br>
           <a href="data/ELO.pdf">paper</a>
           <p></p>
