--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
         <tr>
         <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ELO.png" alt="microflakes" width="200" height="160"></td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="data/ELO.pdf"><papertitle>Towards Efficient Unroll Generalization In
-Learned Optimizers</papertitle></a>
+          <a href="data/ELO.pdf"><papertitle>Towards Robust Unroll Generalization in Learned Optimizers</papertitle></a>
           <br>
           <strong>Xiaolong Huang</strong>, Benjamin Therien, Eugene Belilovsky
           <p></p>
-          (Under review at ICLR)
+          NeurIPS 2025 OPT Workshop
           <br>
           <a href="data/ELO.pdf">paper</a>
           <p></p>
