--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Xiaolong Huang
                 </p>
                 <p>Hey, I am Xiaolong Huang (黄晓龙), an MSc student (Jan. 2025 - now) at MILA and Concordia University. Currently I am working on learned optimization (LO) under the supervision of Prof. <a href="https://eugenium.github.io">Eugene Belilovsky</a>.</p>
-                <p>I am also deeply interested in exploring and interpreting visual and multimodal representations, aiming to create faithful and robust representations for downstream learning. Always open to research discussions and collaborations, feel free to reach out!</p>
+                <p>I am also deeply interested in exploring and interpreting visual and multimodal representations, especially in how to create faithful and robust representations and leverage them for downstream learning. Always open to research discussions and collaborations, feel free to reach out!</p>
                 <p style="text-align:center">
                   <a href="mailto:hirox827@gmail.com">Email</a> &nbsp;/&nbsp;
                   <!-- <a href="data/XiaolongHuang_CV.pdf">CV</a> &nbsp;/&nbsp; -->
